--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
+    "use-debounce": "^10.0.6",
     "zod": "^4.1.12"
   },
   "devDependencies": {
